<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="4">

    <TextView
        android:id="@+id/rankmen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:contentDescription="@string/rank_men"
        android:gravity="center"


        android:padding="10dp"
        android:text="@string/rank_men"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nationality"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/nationality"

        android:gravity="center"

        android:padding="10dp"
        android:text="@string/nationality"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:contentDescription="@string/player_name"
        android:gravity="center"

        android:padding="10dp"
        android:text="@string/player_name"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pointsmen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:contentDescription="@string/points"
        android:gravity="center"

        android:padding="10dp"
        android:text="@string/points"
        android:textColor="@color/text_color"
        android:textSize="20sp" />
</LinearLayout>