<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">
    <TextView
        android:id="@+id/player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/player_name"
        android:gravity="center"
        android:padding="10dp"
        tools:text="@string/player_name" />
    <TextView
        android:id="@+id/vs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/vs"
        android:gravity="center"
        android:padding="10dp"
        tools:text="VS" />

    <TextView
        android:id="@+id/opponent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/playername"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/player_name" />

</LinearLayout>