<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="4dp"

    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="180dp"
           android:scaleType="fitXY"
           android:src="@mipmap/ic_launcher"
        android:transitionName="simple_activity_transition"
           tools:ignore="UnusedAttribute"
        />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:contentDescription="@string/articletitle"
            android:ellipsize="end"


            android:maxLines="4"
            android:paddingBottom="4dp"

            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/article_title"

            android:ellipsize="end"
            android:maxLines="2"
            android:paddingBottom="16dp"

            android:paddingLeft="16dp"
            android:paddingRight="16dp" />



    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:contentDescription="@string/favorite"

        android:minHeight="48dp"
        android:minWidth="48dp"
        android:src="@drawable/star"

        android:stateListAnimator="@animator/fab_state_list_anim"
        app:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/go_to_details"

        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/Click_for_Detail" />
</android.support.v7.widget.CardView>
